fix(card-layout): fix card wrapping

--- a/src/style/results.less
+++ b/src/style/results.less
@@ -31,6 +31,9 @@
 }
 
 .result-container {
+  display: flex;
+  flex-wrap: wrap;
+
 	&.flip .card-container {
     .card-container-inner {
       transform: rotateY(180deg);
